Status/2024Q4: More Vale fixes

--- a/website/content/en/status/report-2024-10-2024-12/bugmeister.adoc
+++ b/website/content/en/status/report-2024-10-2024-12/bugmeister.adoc
@@ -23,12 +23,12 @@ you will note that many of them from the past few weeks have been marked as requ
 Bugmeister folks also did some passes through the database to clean up metadata:
 
  * reassigned bugs away from committers who had had their commit bits safekept over the last year.
- 
+
  * cleaned up bugs for Product: `Base` System Status: `In Progress`.
    A number of these were not being actively worked on.
    The count is down to 184.
    ** In particular, Mark Linimon believes "assigned to mailing list" means "it is not really In Progress".
-   Perhaps it's been discussed, but we do not really have a state for that.
+   Perhaps it has been discussed, but we do not really have a state for that.
    (We can make an argument that that itself is a bug.)
    ** We are now down to only a handful of the above, from "too many".
    The concept is to make sure `In Progress` has some real meaning.
