--- a/website/content/en/status/report-2024-10-2024-12/core.adoc
+++ b/website/content/en/status/report-2024-10-2024-12/core.adoc
@@ -10,7 +10,7 @@ Core had a video conference with the FreeBSD Foundation on 2024-12-12 to follow-
 Core and the Foundation continue discussing how to improve the collaboration and how to support developers and contributors:
 
 * The next round of community survey
-* Identifiying projects where core would like help from the Foundation
+* Identifying projects where core would like help from the Foundation
 * Work on the technical roadmap with the Foundation
 
 ==== Work in Progress
