--- a/website/content/en/status/report-2024-10-2024-12/freebsd-foundation.adoc
+++ b/website/content/en/status/report-2024-10-2024-12/freebsd-foundation.adoc
@@ -10,7 +10,8 @@ link:https://freebsdfoundation.org/our-work/events/[Foundation Events] URL: link
 
 Contact: Deb Goodkin <deb@FreeBSDFoundation.org>
 
-The FreeBSD Foundation is a 501(c)(3) non-profit organization dedicated to advancing FreeBSD through technical and non-technical support. Funded entirely by donations, the Foundation supports software development, infrastructure, security, and collaboration efforts; organizes events and developer summits; provides educational resources; and represents the FreeBSD Project in legal matters.
+The FreeBSD Foundation is a 501(c)(3) non-profit organization dedicated to advancing FreeBSD through technical and non-technical support.
+Funded entirely by donations, the Foundation supports software development, infrastructure, security, and collaboration efforts; organizes events and developer summits; provides educational resources; and represents the FreeBSD Project in legal matters.
 The following report covers just some of the ways we supported FreeBSD in Q4.
 
 Deb Goodkin here.
@@ -24,11 +25,11 @@ We are hiring!
 Check out our jobs page here for our Solutions Specialist and Technical Marketing Manager job postings.
 Plus, we are looking for part-time technical writers and will be opening up another position soon, so keep an eye on this page link:https://freebsdfoundation.org/open-positions/[].
 
-We are still finalizing our 2024 fundraising numbers, but at this writing, we've raised around $1,324,000.
-You might be thinking, why don't we have a final tally now that it's 2025?
-First, we haven't yet received all the checks postmarked 2024 .
-We're also waiting on a few payments from invoices issued last year.
-We'll have a final report in the next quarterly status report.
+We are still finalizing our 2024 fundraising numbers, but at this writing, we have raised around $1,324,000.
+You might be thinking, why do not we have a final tally now that it is 2025?
+First, we have not yet received all the checks postmarked 2024 .
+We are also waiting on a few payments from invoices issued last year.
+We will have a final report in the next quarterly status report.
 
 Thank you to the individuals and organizations that made a financial contribution in Q4!
 We received 325 donations from individuals totaling $120,841 and six financial contributions from organizations totaling $326,000.
@@ -45,7 +46,7 @@ Our updated Q1-Q3 2024 Financial reports will be published by the end of January
 The Final 2024 financial reports will be published in early Q2.
 Going forward, our budget and financial reports will provide more details on how funding is allocated to the major software development projects.
 For example, we will include how much was spent on the laptop project each quarter.
-We're working with our accountant to improve our accounting systems to be more transparent on how we spend our money.
+We are working with our accountant to improve our accounting systems to be more transparent on how we spend our money.
 
 We are excited about the opportunities for FreeBSD in 2025 and beyond, and are growing our team to help support the work needed to take advantage of these opportunities.
 However, we need your help to sustain this.
