--- a/website/content/en/status/report-2024-10-2024-12/qemu_l4b.adoc
+++ b/website/content/en/status/report-2024-10-2024-12/qemu_l4b.adoc
@@ -26,7 +26,8 @@ Next Steps:
 How You Can Help:
 
 * Test with your preferred toolchain, report issues, or contribute fixes.
-* Build and test non-x86_64 emulation images (e.g., FreeBSD/arm64 on Linux/x86_64). The code works on BSD but needs testing on Linux.
+* Build and test non-x86_64 emulation images (e.g., FreeBSD/arm64 on Linux/x86_64).
+  The code works on BSD but needs testing on Linux.
 * Support us on link:https://patreon.com/sippylabs[Patreon].
 
 Sponsor: Sippy Software, Inc.
