--- a/website/content/en/status/report-2024-10-2024-12/framework.adoc
+++ b/website/content/en/status/report-2024-10-2024-12/framework.adoc
@@ -7,7 +7,7 @@ link:https://bugs.freebsd.org/262152[Tracking ticket: Framework Laptop: Feature 
 
 Contact: Daniel Schaefer <dhs@frame.work> +
 Contact: Li-Wen Hsu <lwhsu@FreeBSD.org> +
-Contact: SHENG-YI HONG <aokblast@FreeBSD.org>
+Contact: Sheng-Yi Hong <aokblast@FreeBSD.org>
 
 For a long time, Framework Laptop Inc is friendly to the FreeBSD project in many aspects, including providing engineering samples to Foundation for testing and working on support.
 
