--- a/website/content/en/status/report-2024-10-2024-12/framework.adoc
+++ b/website/content/en/status/report-2024-10-2024-12/framework.adoc
@@ -17,7 +17,7 @@ Sheng-Yi is using the laptop provided by Framework Computer to add more device s
 
 Daniel from Framework Computer Inc started link:https://github.com/FrameworkComputer/freebsd-on-framework[a repository under Framework Computer's GitHub organization] to keep the notes of installation and miscellaneous information.
 He fixed fingerprint readers (libfprint) not just for Framework, but in general on FreeBSD.
-And working on the supoprt and fix to many related drivers on FreeBSD.
+And working on the support and fix to many related drivers on FreeBSD.
 
 In November, Foundation people and some FreeBSD developers visited Framework's San Francisco office and had a meeting for checking the current FreeBSD support status and discussing the possible future collaboration plans.
 
