Status/2024Q4/portmgr.adoc: Fix typo

--- a/website/content/en/status/report-2024-10-2024-12/portmgr.adoc
+++ b/website/content/en/status/report-2024-10-2024-12/portmgr.adoc
@@ -12,7 +12,7 @@ Contact: FreeBSD Ports Management Team <portmgr@FreeBSD.org>
 The Ports Management Team is responsible for overseeing the overall direction of the Ports Tree, building packages, and personnel matters.
 Below is what happened in the last quarter.
 
-In the last quarter, We welcomed Xavier Beaudouin (kiwi@) as a new ports committer.
+In the last quarter, we welcomed Xavier Beaudouin (kiwi@) as a new ports committer.
 
 According to INDEX, there are currently 36,332 (down from 36,504) ports in the Ports Collection.
 There are currently about 3,368 (down from 3,379) open ports PRs, of which 809 are unassigned.
