Document __FreeBSD_version 1402502

--- a/documentation/content/en/books/porters-handbook/versions/_index.adoc
+++ b/documentation/content/en/books/porters-handbook/versions/_index.adoc
@@ -730,6 +730,11 @@ Here is a convenient list of `__FreeBSD_version` values as defined in https://cg
 |December 1, 2024
 |14.2-STABLE after upgrading llvm, clang, compiler-rt, libc++, libunwind, lld, lldb and openmp to llvmorg-19.1.4-0-gaadaa00de76e, a.k.a. 19.1.4 release.
 
+|1402502
+|gitref:d172f42e4ba7ba8542ae0866aaba56e329b4ea2c="src",length=12]
+|February 27, 2025
+|14.2-STABLE after removing redundant `type` and `rid` arguments from several functions in the new-bus resource API.
+
 |===
 
 ////
