--- a/documentation/content/en/books/porters-handbook/versions/_index.adoc
+++ b/documentation/content/en/books/porters-handbook/versions/_index.adoc
@@ -731,9 +731,14 @@ Here is a convenient list of `__FreeBSD_version` values as defined in https://cg
 |14.2-STABLE after upgrading llvm, clang, compiler-rt, libc++, libunwind, lld, lldb and openmp to llvmorg-19.1.4-0-gaadaa00de76e, a.k.a. 19.1.4 release.
 
 |1402502
-|gitref:d172f42e4ba7ba8542ae0866aaba56e329b4ea2c="src",length=12]
+|gitref:d172f42e4ba7ba8542ae0866aaba56e329b4ea2c[repository="src",length=12]
 |February 27, 2025
 |14.2-STABLE after removing redundant `type` and `rid` arguments from several functions in the new-bus resource API.
+
+|1402503
+|gitref:4aed8b3b613c5e1499336e4d7ec7e9a3ac3d9a12[repository="src",length=12]
+|February 27, 2025
+|14.2-STABLE after adding `bus_attach_children`, `bus_detach_children`, and `bus_identify_children`.
 
 |===
 
