Status/2024Q4: Add forgotten report to index

--- a/website/content/en/status/report-2024-10-2024-12/_index.adoc
+++ b/website/content/en/status/report-2024-10-2024-12/_index.adoc
@@ -140,6 +140,10 @@ include::{reports-path}/syzkaller.adoc[]
 
 '''
 
+include::{reports-path}/uvc.adoc[]
+
+'''
+
 [[architectures]]
 == Architectures
 
