--- a/website/content/en/status/report-2024-10-2024-12/uvc.adoc
+++ b/website/content/en/status/report-2024-10-2024-12/uvc.adoc
@@ -13,5 +13,5 @@ The code is still cleaning up and will be submitted to official review system af
 
 The Dell ThinOS team is currently working on MIPI Webcam support, including intel XPU.
 
-Sponsor: Dell Technologies for the development +
+Sponsor: Dell Technologies for the development
 Sponsor: The FreeBSD Foundation for assistance of upstreaming
