--- a/website/content/en/releases/13.5R/schedule.adoc
+++ b/website/content/en/releases/13.5R/schedule.adoc
@@ -39,7 +39,7 @@ General discussions about the pending release and known issues should be sent to
 |BETA1 builds begin |7 February 2025 |7 February 2025 |First beta test snapshot.
 |BETA2 builds begin |14 February 2025 |14 February 2025 |Second beta test snapshot.
 |BETA3 builds begin |21 February 2025 |21 February 2025 |Third beta test snapshot.
-|RC1 builds begin |28 February 2025 |- |First release candidate.
+|RC1 builds begin |28 February 2025 |28 February 2025 |First release candidate.
 |RELEASE builds begin |7 March 2025 |- |{localRel}-RELEASE builds begin.
 |RELEASE announcement |11 March 2025 |- |{localRel}-RELEASE press release.
 |{localRelPrev} EoL |30 June 2025 |- |{localRelPrev}-RELEASE no longer supported.
