Add Jim Brown to contributors
For contributions and help with the documentation.

--- a/shared/contrib-additional.adoc
+++ b/shared/contrib-additional.adoc
@@ -1001,6 +1001,7 @@
 * {babb}
 * Jim Binkley <mailto:jrb@cs.pdx.edu[jrb@cs.pdx.edu]>
 * Jim Bloom <mailto:bloom@acm.org[bloom@acm.org]>
+* Jim Brown <mailto:jpb@jimby.name[jpb@jimby.name]>
 * Jim Carroll <mailto:jim@carroll.com[jim@carroll.com]>
 * Jim Flowers <mailto:jflowers@ezo.net[jflowers@ezo.net]>
 * Jim Geovedi <mailto:jim@corebsd.or.id[jim@corebsd.or.id]>
