handbook/vnet jails: Bridge et al. must be up
Reported by:		Quen Jankosky on Community Discord
Approved by:		carlavilla (mentor)
Differential Revision:	https://reviews.freebsd.org/D49209

--- a/documentation/content/en/books/handbook/jails/_index.adoc
+++ b/documentation/content/en/books/handbook/jails/_index.adoc
@@ -700,11 +700,12 @@ The output should be similar to the following:
 bridge0
 ....
 
-With the `bridge` created, it will be necessary to attach it to the `em0` interface by executing the following command:
+With the `bridge` created, it will be necessary to attach it to the `em0` interface and bring both of them up by executing the following commands:
 
 [source,shell]
 ....
-# ifconfig bridge0 addm em0
+# ifconfig bridge0 addm em0 up
+# ifconfig em0 up
 ....
 
 To make this setting persist across reboots, add the following lines to [.filename]#/etc/rc.conf#:
@@ -714,7 +715,10 @@ To make this setting persist across reboots, add the following lines to [.filena
 defaultrouter="192.168.1.1"
 cloned_interfaces="bridge0"
 ifconfig_bridge0="inet 192.168.1.150/24 addm em0 up"
+ifconfig_em0="up"
 ....
+
+For more information on bridging, see crossref:advanced-networking[network-bridging, Network Bridging].
 
 The next step is to create the jail as indicated above.
 
