[phb][Uses]: Fix Uses=apache version requirements
Reported by:	ohauer@gmx.de

--- a/documentation/content/en/books/porters-handbook/uses/_index.adoc
+++ b/documentation/content/en/books/porters-handbook/uses/_index.adoc
@@ -190,7 +190,7 @@ Provide support for ports depending on the Apache web server.
 
 The version argument can be used to require a specific Apache httpd version.
 It is possible to set a specific version (`USES=apache:2.4`) a minimum version
-(`USES=apache:+2.4`) or a maximum version (`USES=-apache:2.4`).
+(`USES=apache:2.4+`) or a maximum version (`USES=apache:-2.4`).
 
 If the `build` argument is provided a build dependency is added to the port.
 
