--- a/website/content/en/portmgr/policies_eol.adoc
+++ b/website/content/en/portmgr/policies_eol.adoc
@@ -63,6 +63,18 @@ The _Estimated EoL (end-of-life)_ column gives the earliest date on which that b
 
 |June 30, 2025
 
+|releng/13.5 |13.5-RELEASE |releng/13.5 a|
+* FreeBSD:13:aarch64
+* FreeBSD:13:amd64
+* FreeBSD:13:armv6
+* FreeBSD:13:armv7
+* FreeBSD:13:i386
+* FreeBSD:13:powerpc (only quarterly is updated)
+* FreeBSD:13:powerpc64 (only quarterly is updated)
+* FreeBSD:13:powerpc64le (only quarterly is updated)
+
+|April 30, 2026
+
 |stable/14 |n/a |releng/14.0 | |November 30, 2028
 |releng/14.0 |14.0-RELEASE |releng/14.0 a|
 * FreeBSD:14:aarch64
