--- a/website/content/en/where.adoc
+++ b/website/content/en/where.adoc
@@ -152,6 +152,59 @@ a|
 
 Some FreeBSD `RELEASEs` are supported but are older or built from older `STABLE` branches; these are considered "legacy" and are probably only of interest to people maintaining existing systems on FreeBSD.
 
+[[download-rel135]]
+=== FreeBSD {rel135-current}-RELEASE
+[.tblbasic]
+[.tblDownload]
+[width="100%",cols="25%,25%,25%,25%",options="header",]
+|===
+|Installer |VM |SD Card |Documentation
+a|
+* link:{url-rel}/amd64/amd64/ISO-IMAGES/{rel135-current}/[amd64]
+* link:{url-rel}/i386/i386/ISO-IMAGES/{rel135-current}/[i386]
+* link:{url-rel}/powerpc/powerpc/ISO-IMAGES/{rel135-current}/[powerpc]
+* link:{url-rel}/powerpc/powerpc64/ISO-IMAGES/{rel135-current}/[powerpc64]
+* link:{url-rel}/powerpc/powerpc64le/ISO-IMAGES/{rel135-current}/[powerpc64le]
+* link:{url-rel}/powerpc/powerpcspe/ISO-IMAGES/{rel135-current}/[powerpcspe]
+* link:{url-rel}/arm64/aarch64/ISO-IMAGES/{rel135-current}/[aarch64]
+* link:{url-rel}/riscv/riscv64/ISO-IMAGES/{rel135-current}/[riscv64]
+
+a|
+* link:{url-rel}/VM-IMAGES/README.txt[README]
+* link:{url-rel}/VM-IMAGES/{rel135-current}-RELEASE/amd64/Latest/[amd64]
+* link:{url-rel}/VM-IMAGES/{rel135-current}-RELEASE/i386/Latest/[i386]
+* link:{url-rel}/VM-IMAGES/{rel135-current}-RELEASE/aarch64/Latest/[aarch64]
+* link:{url-rel}/VM-IMAGES/{rel135-current}-RELEASE/riscv64/Latest/[riscv64]
+* link:{url-rel}/CI-IMAGES/{rel135-current}-RELEASE/amd64/Latest/[amd64] (BASIC-CI)
+* link:{url-rel}/CI-IMAGES/{rel135-current}-RELEASE/aarch64/Latest/[aarch64] (BASIC-CI)
+
+a|
+* aarch64
+* {blank}
+** link:{url-rel}/arm64/aarch64/ISO-IMAGES/{rel135-current}/[PINE64]
+** link:{url-rel}/arm64/aarch64/ISO-IMAGES/{rel135-current}/[PINE64-LTS]
+** link:{url-rel}/arm64/aarch64/ISO-IMAGES/{rel135-current}/[PINEBOOK]
+** link:{url-rel}/arm64/aarch64/ISO-IMAGES/{rel135-current}/[ROCK64]
+** link:{url-rel}/arm64/aarch64/ISO-IMAGES/{rel135-current}/[ROCKPRO64]
+** link:{url-rel}/arm64/aarch64/ISO-IMAGES/{rel135-current}/[RPI] (3/4)
+* armv6/armv7
+* {blank}
+** link:{url-rel}/arm/armv7/ISO-IMAGES/{rel135-current}/[GENERICSD]
+** link:{url-rel}/arm/armv6/ISO-IMAGES/{rel135-current}/[RPI-B]
+* riscv64
+* {blank}
+** link:{url-rel}/riscv/riscv64/ISO-IMAGES/{rel135-current}/[GENERICSD]
+
+a|
+* link:../releases/#current[Released]: {rel135-current-date}
+* link:{u-rel135-notes}[Release Notes]
+* link:{u-rel135-readme}[Readme]
+* link:{u-rel135-hardware}[Hardware Compatibility List]
+* link:{u-rel135-installation}[Installation Instructions]
+* link:{u-rel135-errata}[Errata]
+* link:{u-rel135-signatures}[Signed Checksums]
+|===
+
 [[download-rel134]]
 === FreeBSD {rel134-current}-RELEASE
 [.tblbasic]
