--- a/website/content/en/releases/13.5R/schedule.adoc
+++ b/website/content/en/releases/13.5R/schedule.adoc
@@ -41,7 +41,7 @@ General discussions about the pending release and known issues should be sent to
 |BETA3 builds begin |21 February 2025 |21 February 2025 |Third beta test snapshot.
 |RC1 builds begin |28 February 2025 |28 February 2025 |First release candidate.
 |RELEASE builds begin |7 March 2025 |7 March 2025 |{localRel}-RELEASE builds begin.
-|RELEASE announcement |11 March 2025 |- |{localRel}-RELEASE press release.
+|RELEASE announcement |11 March 2025 |11 March 2025 |{localRel}-RELEASE press release.
 |{localRelPrev} EoL |30 June 2025 |- |{localRelPrev}-RELEASE no longer supported.
 |{localRel} EoL |30 April 2026 |- |{localRel}-RELEASE no longer supported.
 |{localBranchStable} EoL |30 April 2026 |- |{localBranchStable} no longer supported.
