--- a/website/content/en/releases/_index.adoc
+++ b/website/content/en/releases/_index.adoc
@@ -30,6 +30,7 @@ For information about branches, release dates, and estimated end-of-life (EOL) d
 === Legacy
 
 * *Release {rel134-current}* ({rel134-current-date}) _link:{u-rel134-announce}[Announcement] : link:{u-rel134-notes}[Release Notes] : link:{u-rel134-installation}[Installation Instructions] : link:{u-rel134-hardware}[Hardware Compatibility List] : link:{u-rel134-readme}[Readme] : link:{u-rel134-errata}[Errata] : link:{u-rel134-signatures}[Signed Checksums]_
+* *Release {rel135-current}* ({rel135-current-date}) _link:{u-rel135-announce}[Announcement] : link:{u-rel135-notes}[Release Notes] : link:{u-rel135-installation}[Installation Instructions] : link:{u-rel135-hardware}[Hardware Compatibility List] : link:{u-rel135-readme}[Readme] : link:{u-rel135-errata}[Errata] : link:{u-rel135-signatures}[Signed Checksums]_
 * *Release {rel141-current}* ({rel141-current-date}) _link:{u-rel141-announce}[Announcement] : link:{u-rel141-notes}[Release Notes] : link:{u-rel141-installation}[Installation Instructions] : link:{u-rel141-hardware}[Hardware Compatibility List] : link:{u-rel141-readme}[Readme] : link:{u-rel141-errata}[Errata] : link:{u-rel141-signatures}[Signed Checksums]_
 
 [[future]]
