--- a/website/content/en/security/_index.adoc
+++ b/website/content/en/security/_index.adoc
@@ -107,6 +107,7 @@ link:unsupported[Older releases] are not supported and users are strongly encour
 |releng/14.2 |14.2-RELEASE |December 3, 2024 |September 30, 2025
 |releng/14.1 |14.1-RELEASE |June 4, 2024 |March 31, 2025
 |stable/13 |n/a |n/a |April 30, 2026
+|releng/13.5 |13.5-RELEASE |March 11, 2025 |April 30, 2026
 |releng/13.4 |13.4-RELEASE |September 17, 2024 |June 30, 2025
 |===
 
