--- a/documentation/content/en/books/handbook/x11/_index.adoc
+++ b/documentation/content/en/books/handbook/x11/_index.adoc
@@ -121,7 +121,7 @@ The following table shows the different graphics cards supported by FreeBSD, whi
 ====
 If you encounter a black screen or are unable to switch to a tty using `ctrl+alt+F1, F2, ...`, try searching for DRM modules with `pkg search drm`. In addition to drm-kmod, there may be multiple versions available. Test each one to see which works best for your system, and then stick with the latest version that supports your hardware. This tip applies to AMD, NVIDIA, and other graphics cards as well.
 
-Please note: **Do not remove** the `kld_list+=i915kms` entry from **/etc/rc.conf**; it is not required.
+Please note: **Do not remove** the `kld_list=i915kms` entry from **/etc/rc.conf**; it is not required.
 ====
 
 | AMD(R)
