--- a/shared/releases.adoc
+++ b/shared/releases.adoc
@@ -52,7 +52,7 @@
 
 // Set to 'INCLUDE' when the schedule is available.
 
-:beta2-upcoming: INCLUDE
+:beta2-upcoming: IGNORE
 
 // Set to 'INCLUDE' when the installation images are available.
 
