--- a/documentation/content/en/books/handbook/mirrors/_index.adoc
+++ b/documentation/content/en/books/handbook/mirrors/_index.adoc
@@ -130,6 +130,10 @@ Mirror list maintained by the community and other companies:
 | ftp.cz.FreeBSD.org
 | link:http://ftp.cz.FreeBSD.org/pub/FreeBSD[http] link:http://ftp.cz.FreeBSD.org/pub/FreeBSD[http_v6] link:rsync://ftp.cz.FreeBSD.org[rsync] link:rsync://ftp.cz.FreeBSD.org[rsync_v6]
 
+| Iran icon:envelope[link=mailto:{mirrors-iran-email}, title="mirror contact"]
+| ftp.ir.FreeBSD.org
+| link:http://ftp.ir.FreeBSD.org/FreeBSD[http] link:http://ftp.ir.FreeBSD.org/FreeBSD[http_v6] link:rsync://ftp.ir.FreeBSD.org[rsync] link:rsync://ftp.ir.FreeBSD.org[rsync_v6]
+
 | Denmark icon:envelope[link=mailto:{mirrors-denmark-email}, title="mirror contact"]
 | ftp.dk.FreeBSD.org
 | link:http://ftp.dk.FreeBSD.org/FreeBSD/[http] link:http://ftp.dk.FreeBSD.org/FreeBSD/[http_v6] link:ftp://ftp.dk.FreeBSD.org/FreeBSD/[ftp] link:ftp://ftp.dk.FreeBSD.org/FreeBSD/[ftp_v6] link:rsync://ftp.dk.FreeBSD.org/FreeBSD/[rsync] link:rsync://ftp.dk.FreeBSD.org/FreeBSD/[rsync_v6]
