--- a/website/content/en/releases/13.5R/relnotes.adoc
+++ b/website/content/en/releases/13.5R/relnotes.adoc
@@ -245,7 +245,7 @@ This section covers changes and additions to devices and device drivers since {r
 Purism coreboot keyboards support was added.
 gitref:dfdcb418d7b8[repository=src].
 
-Support of Realtek 8156/8156B was moved from man:dce[4] to man:ure[4].
+Support of Realtek 8156/8156B was moved from man:cdce[4] to man:ure[4].
 gitref:1b0af7617e6c[repository=src].
 (Sponsored by	The FreeBSD Foundation)
 
