--- a/website/content/en/releases/13.5R/relnotes.adoc
+++ b/website/content/en/releases/13.5R/relnotes.adoc
@@ -392,7 +392,7 @@ This section covers changes to manual (man:man[1]) pages and other documentation
 [[man-pages]]
 === Man Pages
 
-Refer to man:graid[8] and zfs[8] instead of gvinum[8] in man:ccdconfig[8].
+Refer to man:graid[8] and man:zfs[8] instead of man:gvinum[8] in man:ccdconfig[8].
 gitref:9e3c356f11a9[repository=src].
 
 man:ixgbe[4] has been renamed to man:ix[4].
