In Memoriam: Hans Petter Selasky
Discussed with:		gallatin, imp
Reviewed by:		dbaio, lwhsu
Approved by:		gallatin
Approved by:		carlavilla, mhorne (mentors)
Differential Revision:	https://reviews.freebsd.org/D49215

--- a/documentation/content/en/articles/contributors/contrib-develinmemoriam.adoc
+++ b/documentation/content/en/articles/contributors/contrib-develinmemoriam.adoc
@@ -1,4 +1,20 @@
-
+* Hans Petter Selasky (1982 - 2023; RIP 2023)
++
+The FreeBSD community remembers Hans Petter Selasky who passed away in Lillesand, Norway on June 23, 2023 at the age of 41.
+Hans was an incredibly brilliant and kind person, and made many valuable contributions to FreeBSD.
+He was best known for re-writing and maintaining the USB stack and the webcamd package which enables modern teleconferencing on FreeBSD.
+Most recently, he worked for Mellanox (now Nvidia) to support their ConnectX series of high speed NICs on FreeBSD.
+Hans’s work included major contributions to the kernel TLS framework, as well as support for NIC kTLS send and receive offload in the mce(4) driver.
++
+One example improvement was his idea to sort incoming TCP packets using the NIC provided RSS flow identifiers in order to present LRO with all packets from the same TCP connection back to back.
+This idea was crucial to Netflix's ability to serve 100Gb/s of video traffic from a single machine.
++
+Outside of FreeBSD, Hans’s hobbies included music and mathematics.
+He was active in his church, and contributed to its sound team.
+He was a loving and dedicated uncle to his nieces and nephews.
+He loved animals, especially his cat Pumba.
++
+A longer edition of this remembrance can be found on link:https://forums.freebsd.org/threads/in-memoriam-hans-petter-william-sirevag-selasky.89697/[this FreeBSD Forum page].
 * Bruce D. Evans (1991 - 2019; RIP 2019)
 +
 Bruce was a programming giant who made FreeBSD his home.
