--- a/shared/authors.adoc
+++ b/shared/authors.adoc
@@ -1364,7 +1364,7 @@
 :hrs: {hrs-name} <{hrs-email}>
 
 :hselasky-name: Hans Petter Selasky
-:hselasky-email: hselasky@FreeBSD.org
+:hselasky-email: \hselasky@FreeBSD.org
 :hselasky: {hselasky-name} <{hselasky-email}>
 
 :hsu-name: Jeffrey Hsu
