In Memoriam: Mike Karels
Discussed with:		mckusick, Deb Goodkin
Approved by:		carlavilla (mentor)
Differential Revision:	https://reviews.freebsd.org/D49407

--- a/documentation/content/en/articles/contributors/contrib-develinmemoriam.adoc
+++ b/documentation/content/en/articles/contributors/contrib-develinmemoriam.adoc
@@ -1,3 +1,26 @@
+* Mike Karels (2016 - 2024; RIP 2024)
++
+Mike Karels, originally a microbiology Ph.D. degree candidate at University of California Berkeley (UCB), expressed interest in computers in a nearby lab which led him to change his entire career path.
+He eventually became involved in the Computer Systems Research Group (CSRG) at UCB in the early 1980's.
+Once there, his contributions were instrumental in the development and improvement of the BSD Unix TCP/UDP/IP implementation, including the socket interface API, one of the most widely used application programming interfaces in the history of the Internet.
++
+Over the next several years, he continued to help prepare the Berkeley Software Distribution releases for  4.3BSD, 4.3BSD-Tahoe, 4.3BSD-Reno, Networking Release 1, and Networking Release 2.
+During this time, he was one of the authors of "The Design and Implementation of the 4.3BSD Unix Operating System", an important book in the field of computers and operating systems, published in 1989.
++
+After leaving the CSRG, he was a founding member of BSD Incorporated (BSDi), one of the earliest purveyors of BSD Unix software in source and binary forms.
+Mike held steady through multiple organizational changes across Walnut Creek CDROM, Wind River Systems, Secure Computing, McAfee, Intel Security, and Forcepoint.
++
+In 1994, on the occasion of the 25th anniversary of Unix, the USENIX Association honored Mike with inclusion in the Unix Deck of Cards, a set of playing cards with the faces of pioneers in the early Unix
+community.
+He is the Seven of Spades.
++
+He also became involved with the FreeBSD Project and contributed greatly to it over the years including additions to the sysctl subsystem, and the Mandatory Access Control (MAC) framework, eventually earning a src commit bit.
+After his retirement, he stepped up to help with the release engineering of FreeBSD and was elected to serve on the core team shortly before his unexpected passing on his way home from the BSDCan 2024 Conference.
+Just the previous year, he gave a delightful retrospective talk on his work with BSD at BSDCan 2023 that can be viewed on YouTube: https://www.youtube.com/watch?v=XSziyKlG1ws.
++
+Mike is remembered as a brilliant software engineer, patient, humble and approachable to those needing help.
+He enjoyed music, photography, and nature as well as spending time with his family.
+A remembrance page for Mike can be found at https://www.gearty-delmore.com/obituaries/michael-mike-karels.
 * Hans Petter Selasky (2010 - 2023; RIP 2023)
 +
 The FreeBSD community remembers Hans Petter Selasky who passed away in Lillesand, Norway on June 23, 2023 at the age of 41.
