--- a/shared/authors.adoc
+++ b/shared/authors.adoc
@@ -1800,7 +1800,7 @@
 :kan: {kan-name} <{kan-email}>
 
 :karels-name: Mike Karels
-:karels-email: karels@FreeBSD.org
+:karels-email: \karels@FreeBSD.org
 :karels: {karels-name} <{karels-email}>
 
 :kargl-name: Steven G. Kargl
