--- a/website/content/en/status/report-2024-10-2024-12/uvc.adoc
+++ b/website/content/en/status/report-2024-10-2024-12/uvc.adoc
@@ -2,7 +2,7 @@
 
 Links: +
 link:https://github.com/AlvinChen1028/freebsd-src/tree/feature-uvc[Public development repository] URL: link:https://github.com/AlvinChen1028/freebsd-src/tree/feature-uvc[] +
-link:https://github.com/lwhsu/freebsd-src/pull/3[Upstreaming preparation repository] URL: link:https://github.com/lwhsu/freebsd-src/pull/3[] +
+link:https://github.com/lwhsu/freebsd-src/pull/3[Upstreaming preparation repository] URL: link:https://github.com/lwhsu/freebsd-src/pull/3[]
 
 Contact: Alvin Chen <weike_chen@dell.com> +
 Contact: Li-Wen Hsu <lwhsu@FreeBSD.org>
@@ -13,5 +13,5 @@ The code is still cleaning up and will be submitted to official review system af
 
 The Dell ThinOS team is currently working on MIPI Webcam support, including intel XPU.
 
-Sponsor: Dell Technologies for the development
+Sponsor: Dell Technologies for the development +
 Sponsor: The FreeBSD Foundation for assistance of upstreaming
