status, 2024 q4: clusteradm: sponsor
Consistency. The FreeBSD Foundation is a sponsor (singular).

--- a/website/content/en/status/report-2024-10-2024-12/clusteradm.adoc
+++ b/website/content/en/status/report-2024-10-2024-12/clusteradm.adoc
@@ -78,4 +78,4 @@ We are particularly interested in locations on the United States West Coast and 
 
 See link:https://wiki.freebsd.org/Teams/clusteradm/generic-mirror-layout[generic mirrored layout] for full mirror site specs and link:https://wiki.freebsd.org/Teams/clusteradm/tiny-mirror[tiny-mirror] for a single mirror site.
 
-Sponsors: The FreeBSD Foundation
+Sponsor: The FreeBSD Foundation
