mailing-list-faq: clarify subscription requirement
FreeBSD mailing lists have required subscription to post for several
years now.  Update the FAQ accordingly.

PR:           285509
Reported by:  Alexey Sukhoguzov
Event:        Tokyo Hackathon 202503

--- a/documentation/content/en/articles/mailing-list-faq/_index.adoc
+++ b/documentation/content/en/articles/mailing-list-faq/_index.adoc
@@ -81,9 +81,8 @@ This will help everyone to have a better experience with the lists.
 
 If after reading the above lists, you still do not know which mailing list to post a question to, you will probably want to post to freebsd-questions (but see below, first).
 
-Also note that the mailing lists have traditionally been open to postings from non-subscribers.
-This has been a deliberate choice, to help make joining the FreeBSD community an easier process, and to encourage open sharing of ideas.
-However, due to past abuse by some individuals, certain lists now have a policy where postings from non-subscribers must be manually screened to ensure that they are appropriate.
+Note that you must subscribe to a mailing list before you can post.
+You can elect to subscribe without receiving messages posted to the mailing list.
 
 === How can I subscribe?
 
