--- a/documentation/content/en/books/handbook/zfs/_index.adoc
+++ b/documentation/content/en/books/handbook/zfs/_index.adoc
@@ -1331,12 +1331,14 @@ For legacy boot using GPT, use the following command:
 # gpart bootcode -b /boot/pmbr -p /boot/gptzfsboot -i 1 ada1
 ....
 
-For systems using EFI to boot, execute the following command:
+For systems using EFI to boot, execute the following commands:
 
 [source,shell]
 ....
-# mount_msdosfs /dev/ada1p1 /boot/efi
-# cp /boot/loader.efi /boot/efi/efi/boot/bootx64.efi
+# umount /boot/efi
+# mount -t msdosfs /dev/ada1p1 /boot/efi
+# cp /boot/loader.efi /boot/efi/efi/boot/boot*.efi
+# cp /boot/loader.efi /boot/efi/efi/freebsd/loader.efi
 # umount /boot/efi
 ....
 
