committers guide: permit key words more than once
While some key words such as "MFC after:" should only appear once,
others such as "PR:" or "Sponsored by:" may be clearer if each entry
appears on it's own line.  This is already somewhat common practice so
explicitly permit it.

Reviewed by:	kevans, imp, emaste
Differential Revision:	https://reviews.freebsd.org/D49429

--- a/documentation/content/en/articles/committers-guide/_index.adoc
+++ b/documentation/content/en/articles/committers-guide/_index.adoc
@@ -2542,6 +2542,8 @@ As well as including an informative message with each commit, some additional in
 
 This information consists of one or more lines containing the key word or phrase, a colon, tabs for formatting, and then the additional information.
 
+For key words where multiple values make sense (e.g., `PR:` with a comma-separated list of PRs), it is permitted to use the same keyword multiple times to avoid ambiguity or improve readability.
+
 The key words or phrases are:
 
 [.informaltable]
