Add Zoltan Kiraly to contributors
For many changes and help with the ports tree.

--- a/shared/contrib-additional.adoc
+++ b/shared/contrib-additional.adoc
@@ -2388,6 +2388,7 @@
 * Zhihao Yuan <mailto:lichray@gmail.com[lichray@gmail.com]>
 * Zhixiang JIANG <mailto:luckrill@yahoo.com.cn[luckrill@yahoo.com.cn]>
 * Zhong Ming-Xun <mailto:zmx@mail.CDPA.nsysu.edu.tw[zmx@mail.CDPA.nsysu.edu.tw]>
+* Zoltán Király <mailto:ports@zoltankiraly.com[ports@zoltankiraly.com]>
 * appleboy <mailto:appleboy.tw@gmail.com[appleboy.tw@gmail.com]>
 * arci <mailto:vega@sophia.inria.fr[vega@sophia.inria.fr]>
 * ayunyan <mailto:ayunyan@gmail.com[ayunyan@gmail.com]>
