handbook/mirrors: Add additional protocols to ftp.de.FreeBSD.org
Requested by:	Jan Siml (Plus.line)

--- a/documentation/content/en/books/handbook/mirrors/_index.adoc
+++ b/documentation/content/en/books/handbook/mirrors/_index.adoc
@@ -152,7 +152,7 @@ Mirror list maintained by the community and other companies:
 
 | Germany icon:envelope[link=mailto:{mirrors-germany-email}, title="mirror contact"]
 | ftp.de.FreeBSD.org
-| link:ftp://ftp.de.FreeBSD.org/pub/FreeBSD[ftp] link:ftp://ftp.de.FreeBSD.org/pub/FreeBSD[ftp_v6] link:rsync://ftp.de.FreeBSD.org[rsync] link:rsync://ftp.de.FreeBSD.org[rsync_v6]
+| link:http://ftp.de.FreeBSD.org/FreeBSD[http] link:http://ftp.de.FreeBSD.org/FreeBSD[http_v6] link:https://ftp.de.FreeBSD.org/FreeBSD[https] link:https://ftp.de.FreeBSD.org/FreeBSD[https_v6] link:ftp://ftp.de.FreeBSD.org/pub/FreeBSD[ftp] link:ftp://ftp.de.FreeBSD.org/pub/FreeBSD[ftp_v6] link:rsync://ftp.de.FreeBSD.org/FreeBSD[rsync] link:rsync://ftp.de.FreeBSD.org/FreeBSD[rsync_v6]
 
 |
 | ftp1.de.FreeBSD.org
