--- a/website/content/en/status/report-2025-01-2025-03/pot.adoc
+++ b/website/content/en/status/report-2025-01-2025-03/pot.adoc
@@ -10,13 +10,12 @@ Contact: Michael Gmelin (Potman) <grembo@FreeBSD.org>
 Pot is a jail management tool that link:https://www.freebsd.org/news/status/report-2020-01-2020-03/#pot-and-the-nomad-pot-driver[also supports orchestration through Nomad].
 Potluck aims to be to FreeBSD and Pot what Dockerhub is to Linux and Docker: a repository of Pot flavours and complete container images for usage with Pot and in many cases Nomad.
 
-During this quarter, there was a new link:https://github.com/bsdpot/pot/releases/tag/0.17.0[Pot release 0.17].
-The changes include a fix link:https://github.com/bsdpot/pot/releases/tag/0.17.0[for xxx] and link:https://github.com/bsdpot/pot/releases/tag/0.17.0[yyy].
+During this quarter, there was a new link:https://github.com/bsdpot/pot/releases/tag/0.16.1[Pot release 0.16.1] which includes a number of minor fixes. The FreeBSD port was updated accordingly.
 
 Potluck got a new link:https://github.com/bsdpot/potluck/tree/master/onlyoffice-documentserver[OnlyOffice Documentserver] image that can be used together with the link:https://github.com/bsdpot/potluck/tree/master/nextcloud-nginx-nomad[Nextcloud] image.  
 Additionally, a large number of images have received improvements and bug fixes again, e.g. link:https://github.com/bsdpot/potluck/tree/master/nextcloud-spreed-signalling[Nextcloud Spreed], link:https://github.com/bsdpot/potluck/tree/master/grafana[Grafana], link:https://github.com/bsdpot/potluck/tree/master/vault[Vault] or link:https://github.com/bsdpot/potluck/tree/master/consul[Consul] and all images have been rebuilt for an updated base image.
 
-Last not least, we have moved the main repository to Codeberg with Github acting as a mirror.
+Last not least, we are in the process of moving the main repository to Codeberg with Github acting as a mirror.
 
 As always, feedback and patches are welcome.
 
