--- a/website/content/en/status/report-2025-01-2025-03/pot.adoc
+++ b/website/content/en/status/report-2025-01-2025-03/pot.adoc
@@ -1,7 +1,7 @@
 === Containers and FreeBSD: Pot, Potluck and Potman
 
 Links: +
-link:https://github.com/bsdpot[Pot organization on Codeberg] URL: link:https://github.com/bsdpot[]
+link:https://github.com/bsdpot[Pot organization on Github] URL: link:https://github.com/bsdpot[]
 
 Contact: Luca Pizzamiglio (Pot) <pizzamig@FreeBSD.org> +
 Contact: Bretton Vine (Potluck) <bv@honeyguide.eu> +
