Handbook/cutting-edge: Correct git pull examples
PR:			284340
Reviewed by:		ziaee, mhorne
Approved by:		mhorne (mentor)
Differential Revision:	https://reviews.freebsd.org/D49494

--- a/documentation/content/en/books/handbook/cutting-edge/_index.po
+++ b/documentation/content/en/books/handbook/cutting-edge/_index.po
@@ -1499,7 +1499,7 @@ msgstr ""
 #: documentation/content/en/books/handbook/cutting-edge/_index.adoc:739
 #, no-wrap
 msgid ""
-"# git pull -C /usr/src  <.>\n"
+"# git -C /usr/src pull   <.>\n"
 "check /usr/src/UPDATING  <.>\n"
 "# cd /usr/src          <.>\n"
 "# make -j4 buildworld  <.>\n"
@@ -1619,7 +1619,7 @@ msgstr ""
 #. type: delimited block . 4
 #: documentation/content/en/books/handbook/cutting-edge/_index.adoc:791
 #, no-wrap
-msgid "# git pull -C /usr/src\n"
+msgid "# git -C /usr/src pull\n"
 msgstr ""
 
 #. type: Plain text
