--- a/documentation/content/en/books/handbook/cutting-edge/_index.adoc
+++ b/documentation/content/en/books/handbook/cutting-edge/_index.adoc
@@ -726,7 +726,7 @@ To prevent this, perform the following steps *before* updating sources and build
 +
 [source,shell]
 ....
-# git pull -C /usr/src  <.>
+# git -C /usr/src pull <.>
 check /usr/src/UPDATING  <.>
 # cd /usr/src          <.>
 # make -j4 buildworld  <.>
@@ -788,7 +788,7 @@ This indicates that [.filename]#/usr/src/# is under version control and can be u
 [[synching]]
 [source,shell]
 ....
-# git pull -C /usr/src
+# git -C /usr/src pull
 ....
 
 The update process can take some time if the directory has not been updated recently.
