--- a/website/content/en/status/report-2025-01-2025-03/cfc.adoc
+++ b/website/content/en/status/report-2025-01-2025-03/cfc.adoc
@@ -16,9 +16,25 @@ Contact: ykla <yklaxds@gmail.com>
 
 Updates in this quarter: 
 
-* Added: "Installing Budgie", "bsdconfig System Configuration Tool", "Installing Fluxbox", "Installing IceWM", "Prometheus Monitoring Deployment", "Fail2Ban (Based on IPFW, PF, IPF)", "Installing Window Maker", "Manual Dual-Boot Installation (Installing FreeBSD First)", "Installing FreeBSD - Based on Apple M1 & Parallels Desktop 20", "Command Line Basics", "Zabbix Monitoring (Based on PostgreSQL)", etc.
+* Added:
+  * Installing Budgie
+  * bsdconfig System Configuration Tool
+  * Installing Fluxbox
+  * Installing IceWM
+  * Prometheus Monitoring Deployment
+  * Fail2Ban (Based on IPFW, PF, IPF)
+  * Installing Window Maker
+  * Manual Dual-Boot Installation (Installing FreeBSD First)
+  * Installing FreeBSD - Based on Apple M1 & Parallels Desktop 20
+  * Command Line Basics
+  * Zabbix Monitoring (Based on PostgreSQL)
+  * etc.
 
-* Rewritten: "Pure-FTPd (Based on MySQL)", "ProFTPD (Based on MySQL)", "vsftpd".
+* Rewritten:
+  * Pure-FTPd (Based on MySQL)
+  * ProFTPD (Based on MySQL)
+  * vsftpd
+
 
 * Introduced several GitHub Actions, such as automatic PDF generation, dead link checking, etc.
 
